--- a/ProyectoIntegracionBiocentro/CapaPresentacion/Biocentro/assets/css/custom.css
+++ b/ProyectoIntegracionBiocentro/CapaPresentacion/Biocentro/assets/css/custom.css
@@ -173,3 +173,32 @@
         font-weight: 600
     }
 }
+
+.placeholder
+{
+    font-size: 8px;
+    color: darkgrey;
+}
+
+.placeholder.error
+{
+    color:red;
+}
+
+h3 {
+    font-size: 18px;
+    font-weight: 600;
+    color: darkslategrey;
+}
+
+h5{
+    font-size: 13px;
+    font-weight: 600;
+    color: lightslategrey;
+}
+
+label {
+    font-size: 11px;
+    font-weight: 600;
+    color: dimgray;
+}
