--- a/ProyectoIntegracionBiocentro/CapaServicioPresentacionWeb/Biocentro/paginas/MasterPage.Master
+++ b/ProyectoIntegracionBiocentro/CapaServicioPresentacionWeb/Biocentro/paginas/MasterPage.Master
@@ -1,4 +1,5 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="master_page.Master.cs" Inherits="CapaPresentacion.master_page" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="MasterPage.master.cs" Inherits="CapaServicioPresentacionWeb.Biocentro.paginas.MasterPage" %>
+
 <!DOCTYPE html>
 
 <html>
@@ -11,10 +12,10 @@
     <body>
     <form id="form1" runat="server">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <link href="/assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="screen" runat="server"/>
-        <link href="/assets/fontawesome/css/all.css" rel="stylesheet" type="text/css" media="screen" runat="server"/>    
-        <script src="/assets/js/bootstrap.js"></script>
-        <link href="/assets/css/custom.css" rel="stylesheet" type="text/css" media="screen" runat="server"/>       
+        <link href="/Biocentro/assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="screen" runat="server"/>
+        <link href="/Biocentro/assets/fontawesome/css/all.css" rel="stylesheet" type="text/css" media="screen" runat="server"/>    
+        <script src="/Biocentro/assets/js/bootstrap.js"></script>
+        <link href="/Biocentro/assets/css/custom.css" rel="stylesheet" type="text/css" media="screen" runat="server"/>       
         <div class="container">
           <nav class="navbar navbar-default">
             <div class="container-fluid">
@@ -26,7 +27,7 @@
                   <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="/assets/img/1240576_10152247804764572_1285943579_n.jpg" alt="Biocentro">
+                    <img src="/Biocentro/assets/img/1240576_10152247804764572_1285943579_n.jpg" alt="Biocentro">
                 </a>
               </div>
               <div id="navbar1" class="navbar-collapse collapse">
@@ -46,7 +47,7 @@
                     </ul>
                   </li>
                   <li><a href="#">Contácto</a></li>    
-                  <li><a href="/Biocentro/paginas/reservar_hora/inicio_reservar.aspx">Reserva de horas</a></li>                 
+                  <li><a href="/Biocentro/paginas/reservar_hora/InicioReserva.aspx">Reserva de horas</a></li>                 
                   <li><a href="#">Intranet</a></li>
                 </ul>
               </div>
