--- a/ProyectoIntegracionBiocentro/CapaServicioPresentacionWeb/Biocentro/assets/css/custom.css
+++ b/ProyectoIntegracionBiocentro/CapaServicioPresentacionWeb/Biocentro/assets/css/custom.css
@@ -1,5 +1,5 @@
 ﻿.body-container{
-    height: 60vh;
+    min-height: 60vh;
 }
 
 .navbar-brand {
@@ -176,7 +176,7 @@
 
 .placeholder
 {
-    font-size: 8px;
+    font-size: 0.9em;
     color: darkgrey;
 }
 
@@ -201,4 +201,13 @@ label {
     font-size: 11px;
     font-weight: 600;
     color: dimgray;
+}
+
+.m-b-md
+{
+    margin-bottom: 15px;
+}
+
+.m-t-md {
+    margin-top: 15px;
 }
