--- a/ProyectoIntegracionBiocentro/CapaServicioPresentacionWeb/Biocentro/paginas/MasterPage.Master
+++ b/ProyectoIntegracionBiocentro/CapaServicioPresentacionWeb/Biocentro/paginas/MasterPage.Master
@@ -49,7 +49,7 @@
                   </li>
                   <li><a href="#">Contácto</a></li>    
                   <li><a href="/Biocentro/paginas/reservar_hora/InicioReserva.aspx">Reserva de horas</a></li>                 
-                  <li><a href="#">Intranet</a></li>
+                  <li><a href="/Biocentro/paginas/pago_hora/RegistrarPago.aspx">Intranet</a></li>
                 </ul>
               </div>
               <!--/.nav-collapse -->
