--- a/ProyectoIntegracionBiocentro/CapaServicioPresentacionWeb/Biocentro/paginas/MasterPage.Master
+++ b/ProyectoIntegracionBiocentro/CapaServicioPresentacionWeb/Biocentro/paginas/MasterPage.Master
@@ -1,7 +1,6 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="MasterPage.master.cs" Inherits="CapaServicioPresentacionWeb.Biocentro.paginas.MasterPage" %>
 
 <!DOCTYPE html>
-
 <html>
     <head runat="server">
         <title></title>
@@ -11,15 +10,13 @@
     </head>   
     <body>
     <form id="form1" runat="server">
-        
-
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link href="/Biocentro/assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="screen" runat="server"/>
         <link href="/Biocentro/assets/fontawesome/css/all.css" rel="stylesheet" type="text/css" media="screen" runat="server"/>    
         <script src="/Biocentro/assets/js/bootstrap.js"></script>
         <script src="/Biocentro/assets/js/custom.js"></script>
-        <link href="/Biocentro/assets/css/custom.css" rel="stylesheet" type="text/css" media="screen" runat="server"/>       
+        <link href="/Biocentro/assets/css/custom.css" rel="stylesheet" type="text/css" media="screen" runat="server"/>
+        
         <div class="container">
           <nav class="navbar navbar-default">
             <div class="container-fluid">
@@ -36,7 +33,7 @@
               </div>
               <div id="navbar1" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Inicio</a></li>
+                  <li class=""><a href="#">Inicio</a></li>
                   <li><a href="#">Sobre Nosotros</a></li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Servicios <span class="caret"></span></a>
@@ -46,8 +43,9 @@
                       <li><a href="#">Medicina China</a></li>
                       <li class="divider"></li>
                       <li class="dropdown-header">Masoterapia</li>
-                      <li><a href="#">Masoterapia</a></li>
-                      <li><a href="#">Masoterapia</a></li>
+                      <li><a href="#">Masaje descontracturante</a></li>
+                      <li><a href="#">Masaje de relajación</a></li>
+                      <li><a href="#">Masaje deportivo</a></li>
                     </ul>
                   </li>
                   <li><a href="#">Contácto</a></li>    
@@ -65,8 +63,8 @@
         </div>
 
         <div class="container body-container">
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
-            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
+            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
+            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
             </div>
@@ -74,6 +72,7 @@
                 <asp:ContentPlaceHolder ID="footer" runat="server">
                 </asp:ContentPlaceHolder>
             </div>
+            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
         </div>
             <footer class="site-footer">
                   <div class="container">
@@ -115,19 +114,10 @@
                   <div class="container">
                     <div class="row">
                       <div class="col-md-8 col-sm-6 col-xs-12">
-                        <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
-                     <a href="#">Biocentro</a>.
+                        <p class="copyright-text">Copyright &copy;Derechos reservados
+                     <a href="#">Biocentro</a> 2019
                         </p>
-                      </div>
-
-                      <div class="col-md-4 col-sm-6 col-xs-12">
-                        <ul class="social-icons">
-                          <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                          <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                          <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                          <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
-                        </ul>
-                      </div>
+                      </div>                    
                     </div>
                   </div>
             </footer>
