--- a/ProyectoIntegracionBiocentro/CapaServicioPresentacionWeb/Biocentro/paginas/MasterPage.Master
+++ b/ProyectoIntegracionBiocentro/CapaServicioPresentacionWeb/Biocentro/paginas/MasterPage.Master
@@ -16,7 +16,8 @@
         <script src="/Biocentro/assets/js/bootstrap.js"></script>
         <script src="/Biocentro/assets/js/custom.js"></script>
         <link href="/Biocentro/assets/css/custom.css" rel="stylesheet" type="text/css" media="screen" runat="server"/>
-        
+        <script src="/Biocentro/assets/js/sweetalert2.min.js"></script>
+        <link href="/Biocentro/assets/css/sweetalert2.min.css" rel="stylesheet" type="text/css" media="screen" runat="server"/>
         <div class="container">
           <nav class="navbar navbar-default">
             <div class="container-fluid">
@@ -42,7 +43,7 @@
                       <li><a href="#">Acupuntura</a></li>
                       <li><a href="#">Psicoterapia</a></li>
                       <li><a href="#">Medicina China</a></li>
-                      <li><a href="#">Masoterapiaa</a></li>
+                      <li><a href="#">Masoterapia</a></li>
                     </ul>
                   </li>
                   <li><a href="#">Contácto</a></li>    
